# cerebellum

./: .gitignore  Makefile.am  README.md  configure.ac
script/: check.mk
src/: Makefile.am
src/application/: Makefile.am
src/core/: Makefile.am  list.c
src/core/avahi/: avahi-browser.c  avahi-client.c  avahi-service.c  core-client.h
src/core/include/: alloc.h  cond.h  export.h  list.h  log.h
src/core/include/avahi/: avahi-browser.h  avahi-client.h  avahi-service.h
src/core/include/loop/: loop.h
src/core/include/ssl/: ssl-client.h  ssl-packet.h  ssl.h
src/core/loop/: loop-idle.c  loop-idle.h  loop.c
src/core/loop/avahi/: avahi-loop.c  avahi-timer.c  avahi-timer.h  avahi-watch.c  avahi-watch.h
src/core/ssl/: ssl-client.c
src/daemon/: Makefile.am  cerebellum-browser.c  cerebellum-client.c  cerebellum-detection.c  cerebellum-main.c  cerebellum-ssl.c  cerebellum.c  cerebellum.h  daemon-alloc.h  daemon-browser.c  daemon-client.c  daemon-cond.h  daemon-ctx.c  daemon-ctx.h  daemon-idle.c  daemon-idle.h  daemon-loop.c  daemon-loop.h  daemon-main.c  daemon-options.c  daemon-options.h  daemon-ssl.c  daemon.c  daemon.h
src/daemon/avahi/: avahi-browser.c  avahi-browser.h  avahi-client.c  avahi-client.h  avahi-loop.c  avahi-service.c  avahi-service.h  avahi-timer.c  avahi-timer.h  avahi-watch.c  avahi-watch.h
src/daemon/ssl/: ssl-client.c  ssl-client.h  ssl-packet.h  ssl.h
